--- a/tools/grademe/p00.md
+++ b/tools/grademe/p00.md
@@ -2,6 +2,6 @@
 Checks norm, compiles, and checks output against model output from provided binary file with ```diff```.  
   
 Run these commands in the ```project00``` directory containing the ```ex00``` directory.  
-1. ```curl -o grademe_r00.tar.gz https://raw.githubusercontent.com/ayip001/42/master/tools/grademe/grademe_r00.tar.gz```
-2. ```tar -xvzf grademe_r00.tar.gz```
+1. ```curl -o grademe_p00.tar.gz https://raw.githubusercontent.com/ayip001/42/master/tools/grademe/grademe_p00.tar.gz```
+2. ```tar -xvzf grademe_p00.tar.gz```
 3. ```./grademe.sh```
