--- a/tools/grademe/p00.md
+++ b/tools/grademe/p00.md
@@ -4,4 +4,7 @@ Checks norm, compiles, and checks output against model output from provided bina
 Run these commands in the ```project00``` directory containing the ```ex00``` directory.  
 1. ```curl -o grademe_p00.tar.gz https://raw.githubusercontent.com/ayip001/42/master/tools/grademe/grademe_p00.tar.gz```
 2. ```tar -xvzf grademe_p00.tar.gz```
-3. ```./grademe.sh```
+3. ```./grademe.sh```  
+
+Alternatively if you are lazy here's all commands joined by ```&&```  
+```curl -o grademe_p00.tar.gz https://raw.githubusercontent.com/ayip001/42/master/tools/grademe/grademe_p00.tar.gz && tar -xvzf grademe_p00.tar.gz && ./grademe.sh```
